# -*- mode: org -*-
* v4.3.1    UNRELEASED

- Added new option ~magit-format-file-function,~ and two functions to
  optionally prefix file names with icons, with the help of either
  ~all-the-icons~ or ~nerd-icons~.  #5308
  
Bugfixes:

- ~magit-commit-revise~ failed if no arguments were used.  #5306

- Some arguments were missing from diff menus when invoked from
  the status buffer.  #5309

* v4.3.0    2025-02-04

- Added new option ~magit-refs-show-branch-descriptions~.  42ed6c1966

- When a stash cannot be applied using the trivial method, the user is
  offered some fallback methods.  The presentation of those has been
  improved.  #5253 a08b4dd513

- Added new hook options ~magit-revision-wash-message-hook~ and
  ~magit-log-wash-summary-hook~, and populate them with new and
  existing highlighting functions, making it easier to remove default
  highlighting and to add custom highlighting.  This also increases
  consistency between how commit summaries are shown in logs and when
  displaying complete commit messages.  f54fce0ecc..b86fe009e2

- ~amend!~ markers are now highlighted like ~fixup!~ and ~squash!~ markers.
  #5261

- ~magit-commit-create~ no longer amends to HEAD when called with a
  prefix argument.  The ~magit-commit~ menu offers four amend commands.
  That should be good enough.  5e60aa72e5

- ~magit-commit~ no longer features the obscure ~magit-commit-reshelve~ by
  default, but it can quickly be reinstated, using the level mechanism.
  20eb323b47

- Added new commands ~magit-commit-alter~ and ~magit-commit-revise~,
  completing the already extensive set of "fixup" commands.  #5261

- Improved commit menu, documentation and implementation details.
  #5261

- The branch at point is detected in more contexts now, i.e., when
  there is not actually a branch at point, but one can unambigiously
  be derived from the thing at point.  4876f1921e

- Reworked ~magit-process-password-prompt-regexps~ to be more permissive